# Agentic-Engineering-Starter-Template

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-reviewer.md
.claude/hooks/: _check.py  _file.py  protect-files.sh  validate-changes.sh
.claude/rules/: python.md  security.md  sql.md  testing.md
.claude/skills/criteria/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/spec/: SKILL.md
docs/: WORKFLOW.md  architecture.md
docs/adr/: 0001-record-architecture-decisions.md
docs/runbooks/: deployment.md  development.md
eval/: eval_forecast.py
scripts/: lint.sh  setup.sh  test.sh  verify.sh
